--- a/src/css/_colors.scss
+++ b/src/css/_colors.scss
@@ -3,4 +3,4 @@ $NeonGreen: hsl(150, 100%, 66%);
 $GrayishBlue: hsl(217, 19%, 38%);
 $DarkGrayishBlue: hsl(217, 19%, 24%);
 $DarkBlue: hsl(218, 23%, 16%);
-$White: #fff;
+$White: #ffffff;
