--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -3,7 +3,7 @@
 
 .gb--content {
     width: 100%;
-    height: 735px;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,42 +20,37 @@
         flex-direction: column;
         background-color: $DarkGrayishBlue;
         width: 400px;
-        height: auto;
         border-radius: 15px;
         margin: auto;
         padding: 60px;
         align-items: center;
         position: relative;
+        height: 250px;
+        justify-content: space-between;
 
-        h1 {
+        .number-advice {
             letter-spacing: 2px;
             text-transform: uppercase;
             font-size: 10px;
-            margin-bottom: 20px;
             color: $NeonGreen;
             font-weight: 800;
+            padding-bottom: 10px;
         }
 
         span {
             font-size: 28px;
             font-weight: 800;
-            margin-bottom: 20px;
-        }
-
-        svg {
-            margin: 10px;
         }
 
         .change {
             background-color: $NeonGreen;
-            border-color: $NeonGreen;
+            border: none;
             font-weight: 800;
             height: 60px;
             width: 60px;
             border-radius: 100%;
             position: absolute;
             top: 90%;
-            left: 45%;
             cursor: pointer;
 
             svg {
@@ -73,6 +68,7 @@
     footer {
         font-size: 14px;
         color: $LightCyan;
+        padding-bottom: 50px;
 
         a {
             color: $NeonGreen;
