--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -28,6 +28,14 @@
         height: 250px;
         justify-content: space-between;
 
+        .main-advice{
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            height: 100%;
+            justify-content: space-between;
+        }
+
         .number-advice {
             letter-spacing: 2px;
             text-transform: uppercase;
